--- a/dockerfile.r-base
+++ b/dockerfile.r-base
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y \
     python3.12 \
     python3.12-venv \
     python3.12-dev \
-    libgit2-dev libssl-dev libcurl4-gnutls-dev \
+    libgit2-dev libssl-dev libcurl4-gnutls-dev pandoc nano \
     && ln -sf /usr/bin/python3.12 /usr/bin/python \
     && apt-get clean && rm -rf /var/lib/apt/lists/* 
 
@@ -15,6 +15,7 @@ ENV PATH="/opt/venv/bin:$PATH"
 RUN pip install mlflow dvc dvc-s3
 
 RUN Rscript -e 'install.packages("mlflow")'
+RUN Rscript -e 'install.packages("renv")'
 
 CMD ["bash"]
 
